@@ -1,0 +1,13 @@
+@node Posix
+@chapter Posix Functions
+
+This chapter groups several utility functions specified by POSIX, but
+not by C.  Each function documents which header to use.
+
+@menu
+* popen::       Create a stream tied to a child process
+@end menu
+
+@page
+@include posix/popen.def
+
